# airhust_consefact_ws

./: README.md
logs/darknet_ros/: build.cmake.000.log.stderr
src/darknet_ros/darknet/: Makefile
src/darknet_ros/darknet_ros/: CMakeLists.txt
src/darknet_ros/darknet_ros/config/: yolov3-tiny.yaml
src/darknet_ros/darknet_ros/launch/: darknet_ros.launch
src/darknet_ros/darknet_ros/yolo_network_config/cfg/: yolov3-tiny.cfg
src/template/config/: trying.yaml
src/template/include/: template.h
src/template/src/: typlcal_move.cpp
src/trying/: CMakeLists.txt  package.xml
src/trying/config/: trying.yaml
src/trying/include/: collision_avoidance.h  darknet_control.h  template.h
src/trying/launch/: trying.launch
src/trying/src/: trying.cpp
